--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.12",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.533.0",
     "moment": "^2.30.1",
     "plotly.js-dist-min": "^3.1.0",
